--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,6 +1,6 @@
 {% extends "bootstrap/base.html" %}
 
-{% block title %}Flasky{% endblock %}
+{% block title %}会考理论题库{% endblock %}
 
 {% block head %}
 {{ super() }}
@@ -19,11 +19,18 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{ url_for('main.index') }}">Flasky</a>
+            <a class="navbar-brand" href="{{ url_for('main.index') }}">考试系统</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="{{ url_for('main.index') }}">Home</a></li>
+                <li><a href="{{ url_for('main.index') }}">首页</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+				{% if current_user.is_authenticated %}
+                <li><a href="{{ url_for('auth.logout') }}">退出</a></li>
+				{% else %}
+                <li><a href="{{ url_for('auth.login') }}">登陆</a></li>
+				{% endif %}
             </ul>
         </div>
     </div>
