--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,7 +5,7 @@
 
 {% block page_content %}
 <div class="page-header">
-	<h1>{% if name %}{{ name }}{% else %}访客{% endif %} 您好！</h1>
+	<h1>{% if current_user.is_authenticated %}{{ current_user.username }}{% else %}访客{% endif %} 您好！</h1>
 	{% if not known %}
 	欢迎访问！
 	{% else %}
