--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}Exam{% endblock %}
+{% block title %}会考理论题库{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
