--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
-{% block title %}会考理论题库 - 页面没有找到{% endblock %}
+{% block title %}Exam system-Page not found{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
-	<h1>页面没有找到</h1>
+	<h1>Page not found</h1>
 </div>
 {% endblock %}
