--- a/app/templates/auth/change_password.html
+++ b/app/templates/auth/change_password.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}会考理论题库 - 修改密码{% endblock %}
+{% block title %}Exam system-change password{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
-	<h1>修改密码</h1>
+	<h1>Change Password</h1>
 </div>
 <div class="col-md-4">
 	{{ wtf.quick_form(form) }}
