--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,17 +1,18 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}Exam system-Login{% endblock %}
+{% block title %}Exam system-Register{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
-	<h1>Login</h1>
+	<h1>Register</h1>
 </div>
 <div class="col-md-4">
 	{{ wtf.quick_form(form) }}
 	<br>
+
 	<div class="col-6 text-right">
-		<a href="{{ url_for('auth.register') }}" class="text-light"><small>Register instead</small></a>
+		<a href="{{ url_for('auth.login') }}" class="text-light"><small>Login instead</small></a>
 	</div>
 </div>
 {% endblock %}
