--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,6 +1,6 @@
 {% extends "bootstrap/base.html" %}
 
-{% block title %}会考理论题库{% endblock %}
+{% block title %}Exam System{% endblock %}
 
 {% block head %}
 {{ super() }}
@@ -19,22 +19,22 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{ url_for('main.index') }}">考试系统</a>
+            <a class="navbar-brand" href="{{ url_for('main.index') }}">Exam System</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="{{ url_for('main.index') }}">首页</a></li>
+                <li><a href="{{ url_for('main.index') }}">Front page</a></li>
             </ul>
-            <ul class="nav navbar-nav navbar-right">
+            <ul class="nav navbar-nav navbar-right dropdown">
 				{% if current_user.is_authenticated %}
-				<li class="dropdown">
-					<ul class="dropdown-menu">
-                		<li><a href="{{ url_for('auth.change_password') }}">修改密码</a></li>
-                		<li><a href="{{ url_for('auth.logout') }}">退出</a></li>
-					</ul>
+				<li class="dropdown-toggle">
+					<!--<ul class="dropdown-menu" role="menu" aria-labelledby="menu1">  -->
+                		<li><a href="{{ url_for('auth.change_password') }}">Change Password</a></li>
+                		<li><a href="{{ url_for('auth.logout') }}">Logout</a></li>
+				<!--</ul> -->
 				</li>	
 				{% else %}
-                <li><a href="{{ url_for('auth.login') }}">登陆</a></li>
+                <li><a href="{{ url_for('auth.login') }}">Login</a></li>
 				{% endif %}
             </ul>
         </div>
