--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -4,8 +4,9 @@
 
 {% block page_content %}
 <div class="page-header">
-	<h1>{{ ('Not Found') }}</h1>
+	<h1>{{ ('An unexpected error has occurred') }}</h1>
     <h4>{{ error }}</h4>
+    <p>{{ ('The administrator has been notified. Sorry for the inconvenience!') }}</p>
     <p><a href="{{ url_for('main.index') }}">{{ ('Back') }}</a></p>
 </div>
 {% endblock %}
